--- a/.github/workflows/merge-from-tag.yml
+++ b/.github/workflows/merge-from-tag.yml
@@ -29,15 +29,15 @@ jobs:
         id: latest_tag
         run: echo "::set-output name=tag::$(git describe --tags `git rev-list --tags --max-count=1`)"
 
-      - name: Checkout the latest tag
-        run: git checkout ${{ steps.latest_tag.outputs.tag }}
-
       - name: Generate branch name
         id: branch_name
         run: echo "::set-output name=branch::PR-Tag-${{ steps.latest_tag.outputs.tag }}"
+        
+      - name: Checkout new branch
+        run: git checkout -b ${{ steps.branch_name.outputs.branch }}
 
-      - name: Checkout main branch
-        run: git checkout main
+      - name: Merge the latest tag
+        run: git merge ${{ steps.latest_tag.outputs.tag }}
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
