--- a/.github/workflows/merge-from-tag.yml
+++ b/.github/workflows/merge-from-tag.yml
@@ -37,7 +37,7 @@ jobs:
         run: git checkout -b ${{ steps.branch_name.outputs.branch }}
 
       - name: Merge the latest tag
-        run: git merge ${{ steps.latest_tag.outputs.tag }}
+        run: git merge ${{ steps.latest_tag.outputs.tag }} --allow-unrelated-histories -X theirs 
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
