--- a/.github/workflows/test_merge_tag.yml
+++ b/.github/workflows/test_merge_tag.yml
@@ -1,4 +1,4 @@
-name: test_merge_tags
+name: Merge Latest Tag from Upstream
 
 on:
   schedule:
@@ -30,31 +30,19 @@ jobs:
         id: latest_tag
         run: echo "::set-output name=tag::$(git describe --tags `git rev-list --tags --max-count=1`)"
 
-      - name: Checkout the latest tag
-        run: git checkout ${{ steps.latest_tag.outputs.tag }}
+      - name: Create a new branch with the latest tag from upstream
+        run: git checkout -b new-branch ${{ steps.latest_tag.outputs.tag }}
 
-      - name: Generate branch name
-        id: branch_name
-        run: echo "::set-output name=branch::PR-Tag-${{ steps.latest_tag.outputs.tag }}"
-
-      - name: Checkout main branch
-        run: git checkout main
+      - name: Push the new branch to the repository
+        run: git push origin new-branch
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.PAT }}
           commit-message: "Merge latest tag from upstream"
-          branch: ${{ steps.branch_name.outputs.branch }}
+          branch: new-branch
           title: "Merge Latest Tag - ${{ steps.latest_tag.outputs.tag }} from Upstream"
           body: |
-            This pull request merges the latest tag from the upstream repository.
+            This pull request merges the latest tag from the upstream repository into the main branch.
             Please review and merge manually.
-
-      - name: Merge pull request into main branch
-        run: |
-          curl \
-            -X PUT \
-            -H "Authorization: Bearer ${{ secrets.PAT }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/ducanhho2296/test-workflow-create-tsi/pulls/${{ github.event.number }}/merge
