--- a/.github/workflows/test_merge_tag.yml
+++ b/.github/workflows/test_merge_tag.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Merge latest tag with new branch
         run: |
           git merge --allow-unrelated-histories -X theirs --no-commit --no-ff origin/main
+          git commit -m "Merge latest tag from upstream"
           git merge --allow-unrelated-histories -X theirs --no-commit --no-ff ${{ steps.latest_tag.outputs.tag }}
           git commit -m "Merge latest tag from upstream"
           
