--- a/.github/workflows/test_merge_tag.yml
+++ b/.github/workflows/test_merge_tag.yml
@@ -37,7 +37,7 @@ jobs:
           
       - name: Create new branch
         id: main_branch_name
-        run: echo "::set-output name= main_branch::PR-Tag-${{ steps.latest_tag.outputs.tag }}
+        run: echo "::set-output name= main_branch::PR-Tag-${{ steps.latest_tag.outputs.tag }}"
 
 
 
